--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,40 @@
-body{
-    background-color: grey;
-    text-align: center;
-  }
-  #prompt{
-    background-color: black;
-    color: whitesmoke;
-    height: 50px;
-    width: 50%;
-    border: 4px solid red;
-    font-size: 30px;
-  }
-  #console{
-    border: 3px solid black;
-    height: 500px;
-    width: 100%;
-  }
-  .consoleLine{
-    border: 2px solid black;
-    text-align:center;
-    padding: 1% 10% 1% 10% 
-  }
-  
+body {
+  background-color: grey;
+  text-align: center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height:100%;
+  width: 100%;
+}
+#prompt {
+  background-color: black;
+  color: whitesmoke;
+  height: 50px;
+  width: 50%;
+  font-size: 30px;
+}
+#console {
+  height: 500px;
+  width: 100%;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+.consoleLine {
+  text-align: center;
+  padding: 1% 10% 1% 10%;
+}
+#dropDownDiv {
+  height: 150px;
+  width: 100%;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+.dropDownButton{
+  width: 100%;
+  height:50px;
+  background-color: gray;
+  opacity: 0.6;
+}
+#version{
+  margin-left: 90%;
+}
