--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
+html {
+  height:100%
+}
+
 body {
   background-color: grey;
   text-align: center;
   background-repeat: no-repeat;
-  background-size: 100% 100%;
   height:100%;
   width: 100%;
 }
